--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
     "eslint-config-next": "13.4.10",
     "framer-motion": "^10.12.22",
     "next": "13.4.10",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
