--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ngrok": "ngrok http 8000"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
@@ -31,6 +32,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "ngrok": "^5.0.0-beta.2"
   }
 }
