--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.4.10",
     "framer-motion": "^10.12.22",
     "next": "13.4.10",
+    "next-seo": "^6.1.0",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.26",
     "react": "18.2.0",
