--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "ngrok": "ngrok http 8000"
+    "ngrok": "ngrok http 8000",
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
@@ -22,6 +23,7 @@
     "framer-motion": "^10.12.22",
     "next": "13.4.10",
     "next-seo": "^6.1.0",
+    "next-sitemap": "^4.2.2",
     "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.26",
     "react": "18.2.0",
